--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "redis": "^3.0.2",
-    "socket.io": "^3.1.0"
+    "socket.io": "^3.1.0",
+    "tone": "^14.7.77"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
